# webring

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/webring/: __init__.py  test_webring.py  webring.py
pelican/plugins/webring/test_data/: pelican-atom.xml  pelican-rss.xml
