[tool.poetry]
name = "pelican-webring"
version = "1.4.0"
description = "Adds a webring to your site from a list of web feeds"
authors = ["David Alfonso <developer@davidalfonso.es>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/pelican-plugins/webring"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/webring/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican = "^4.5"
markdown = {version = "^3.2",optional = true}
feedparser = ">=6.0"

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^5.0"
flake8-black = "^0.3"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
Werkzeug = "^1.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Webring"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" and "webring" as separate import sections
known_pelican = "pelican"
known_webring = "webring"

sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,WEBRING,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
